# semantic-llm-cache

./: .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/cache/: embedder.py  engine.py  keys.py  policy.py  store.py  tuner.py
app/metrics/: prometheus.py
app/providers/: anthropic_provider.py  base.py  openai_compatible.py  router.py
app/proxy/: admin.py  openai_format.py  routes.py  schemas.py  singleflight.py
eval/: dataset.jsonl  precision.py
loadtest/: results.json  run.py  workload.py
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yaml  semantic-cache.json
scripts/: bench_overhead.py  bench_phase1.py  demo.py
tests/: conftest.py  fakes.py  test_engine.py  test_keys.py  test_metrics.py  test_policy.py  test_proxy.py  test_router.py  test_singleflight.py  test_tuner.py  test_workload.py
