[project]
name = "semantic-llm-cache"
version = "0.1.0"
description = "Drop-in semantic caching proxy for LLM APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "redisvl>=0.3.0",
    "openai>=1.40",
    "anthropic>=0.34",
    "numpy>=1.26",
    "prometheus-client>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# On-device embeddings (no API key, CPU). Install with: uv sync --group local
local = [
    "fastembed>=0.4",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
